# quantized_neural_network

./: README.md  pyproject.toml  requirements.txt  train.py
config/: cnn_cifar10.json  mlp_mnist.json  vgg16_imagenet.json
gpfq/: __init__.py
gpfq/dataset/: __init__.py  cifar_dataset.py  imagenet_dataset.py  mnist_dataset.py
gpfq/models/: __init__.py  cnn.py  mlp.py  vgg16.py
gpfq/quantization/: __init__.py  gpfq.py
gpfq/utils/: __init__.py  utils.py
