[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gpfq"
version = "0.1.0"
description = "GPFQ: A Greedy Algorithm for Quantizing Neural Networks"
readme = "README.md"
authors = [
    {name = "Research Team", email = "team@example.com"},
]
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "datasets>=2.0.0",
    "transformers>=4.20.0",
    "scikit-learn>=1.1.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpfq*"]